--- a/code/figure4v2.Rmd
+++ b/code/figure4v2.Rmd
@@ -1,3 +1,8 @@
+---
+output: html_document
+editor_options: 
+  chunk_output_type: console
+---
 ```{r figure-4-plot, fig.width = 9}
 umap_cancertype <- data.table::fread("../data/umap_3d_coors.tsv")
 kelly.colours <- c("gray95", "gray13", "gold2", "plum4", "darkorange1",
@@ -18,7 +23,7 @@ ditto_color <- c(
 cluster.colours <- c("grey", kelly.colours[c(3:12)])
 names(cluster.colours) <- c(0:10)
 
-### I - Cancer Type
+### A - Cancer Type
 par(opar)
 par(mfrow = c(2,3), mai = c(0.1, 0.1, 0.1, 0.1))
 par(mar = c(2,2,0,0))
@@ -33,9 +38,11 @@ with(umap_cancertype %>%
                theta = 0, phi = 65, scale = F,
                xlab = "", ylab = "UMAP 3", zlab = "UMAP 1",
                colvar = NULL))
-legend("top", inset = c(0), legend=rev(names(I_colors)), col=rev(I_colors), pch = 20, bty = "n", horiz = T, cex = 1.2)
+legend("top", inset = c(0), legend=rev(names(I_colors[1:2])), col=rev(I_colors[1:2]), pch = 20, bty = "n", horiz = T, cex = 1.2)
+legend("top", inset = c(0.10), legend=rev(names(I_colors[3:4])), col=rev(I_colors[3:4]), pch = 20, bty = "n", horiz = T, cex = 1.2)
 title(xlab="UMAP 2", line=0)
-### J - BRCA subtype
+mtext("A", side=3, line=-2.05, cex=1.2, adj=0)
+### B - BRCA subtype
 J_colors <- c(ditto_color[c(2,3,4,5)])#, 'grey')
 names(J_colors) <- c("Basal", "Her2", "LumA", "LumB")#, "Other")
 with(umap_cancertype %>% 
@@ -47,9 +54,11 @@ with(umap_cancertype %>%
                theta = 0, phi = 65, scale = F,
                xlab = "", ylab = "UMAP 3", zlab = "UMAP 1",
                colvar = NULL))
-legend("top", inset = c(0), legend=names(J_colors), col=J_colors, pch = 20, bty = "n", horiz = T, cex = 1.2)
+legend("top", inset = c(0), legend=names(J_colors[1:2]), col=J_colors[1:2], pch = 20, bty = "n", horiz = T, cex = 1.2)
+legend("top", inset = c(0.10), legend=names(J_colors[3:4]), col=J_colors[3:4], pch = 20, bty = "n", horiz = T, cex = 1.2)
 title(xlab="UMAP 2", line=0)
-### K - BRCA Somatic Mutations
+mtext("B", side=3, line=-2.05, cex=1.2, adj=0)
+### C - BRCA Somatic Mutations
 load("../data/gdc_gene_exp_adj.Rda")
 load("../data/gene_data.Rda")
 umap_cancertype <- fread("../data/umap_3d_coors.tsv")
@@ -77,9 +86,11 @@ with(brca %>% filter(mut_type != "NA"),
                theta = 0, phi = 65, scale = F,
                xlab = "", ylab = "UMAP 3", zlab = "UMAP 1",
                colvar = NULL))
-legend("top", inset = c(0), legend=names(K_colors), col=K_colors, pch = 20, bty = "n", horiz = T, cex = 1.2)
+legend("top", inset = c(0), legend=names(K_colors[c(1,3)]), col=K_colors[c(1,3)], pch = 20, bty = "n", horiz = T, cex = 1.2)
+legend("top", inset = c(0.10), legend="BRCA1,BRCA2", col=K_colors[2], pch = 20, bty = "n", horiz = T, cex = 1.2)
 title(xlab="UMAP 2", line=0)
-### L - Stage
+mtext("C", side=3, line=-2.05, cex=1.2, adj=0)
+### D - Stage
 L_colors <- c('darkgoldenrod3','dodgerblue3','yellow3','tomato2')
 names(L_colors) <- c("Stage I", "Stage II", "Stage III", "Stage IV")
 with(umap_cancertype %>% filter(ajcc_pathologic_tumor_stage != "Not Available"),
@@ -88,9 +99,11 @@ with(umap_cancertype %>% filter(ajcc_pathologic_tumor_stage != "Not Available"),
                theta = 0, phi = 65, scale = F,
                xlab = "", ylab = "UMAP 3", zlab = "UMAP 1",
                colvar = NULL))
-legend("top", inset = c(0), legend=names(L_colors), col=L_colors, pch = 20, bty = "n", horiz = T, cex = 1.2)
+legend("top", inset = c(0), legend=names(L_colors[1:2]), col=L_colors[1:2], pch = 20, bty = "n", horiz = T, cex = 1.2)
+legend("top", inset = c(0.10), legend=names(L_colors[3:4]), col=L_colors[3:4], pch = 20, bty = "n", horiz = T, cex = 1.2)
 title(xlab="UMAP 2", line=0)
-### M - Metastasis
+mtext("D", side=3, line=-2.05, cex=1.2, adj=0)
+### E - Metastasis
 M_colors <- c('#a6cee3','#1f78b4')
 names(M_colors) <- c("M0", "M1")
 with(umap_cancertype %>% filter(ajcc_metastasis_pathologic_pm %in% c("M0", "M1")),
@@ -101,6 +114,7 @@ with(umap_cancertype %>% filter(ajcc_metastasis_pathologic_pm %in% c("M0", "M1")
                colvar = NULL))
 legend("top", inset = c(0), legend=names(M_colors), col=M_colors, pch = 20, bty = "n", horiz = T, cex = 1.2)
 title(xlab="UMAP 2", line=0)
+mtext("E", side=3, line=-2.05, cex=1.2, adj=0)
 
 plot.new()
 ```
