--- a/text/references.bib
+++ b/text/references.bib
@@ -485,6 +485,18 @@ R. and Lopez-Bigas, N. and Stein L.D. and the Mutation Consequences & Pathway An
   pages = {615--621}
 }
 
+@article{PCAWG-PATH,
+  author = {Sanchez-Vega, F. and Mina, M. and Armenia, J. and Chatila, W.K. and Luna, A. and La, K.C. and Dimitriadoy, S. and Liu, D.L. and Kantheti, H.S. and Saghafinia, S. and Chakravarty, D. and Daian, F. and Gao , Q. and Bailey, M.H. and Liang, W. and Foltz, S.M. and Shmulevich, I. and Ding, L. and Heins, Z. and Ochoa, A. and Gross, B. and Gao, J. and Zhang, H. and Kundra, R. and Kandoth, C. and Bahceci, I. and Dervishi, L. and Dogrusoz, U. and Zhou, W. and Shen, H. and Laird, P.W. and Way, G.P. and Greene, C.S. and Liang, H. and Xiao, Y. and Wang, C. and Iavarone, A. and Berger, A.H. and Bivona, T.G. and Lazar, A.J. and Hammer, G.D. and Giordano, T. and Kwong, L.N. and McArthur, G. and Huang, C. and Tward, A.D. and Frederick, M.J. and McCormick, F. and Meyerson, M. and Cancer Genome Atlas Research Network and Van Allen, E.M. and Cherniack, A.D. and  Ciriello, G. and Sander, C. and Schultz, N.},
+  title = {Oncogenic signaling pathways in the cancer genome},
+  journal = {Cell},
+  year = {2018},
+  volume = {173},
+  number ={2},
+  pages = {321-337.e10},
+  doi = {10.1016/j.cell.2018.03.035},
+  pmid = {29625050}
+}
+
 @article{breast-subtypes,
   author = {Skibinski, A. and Kuperwasser, C.},
   title = {The origin of breast tumor heterogeneity},
