--- a/text/discussion.Rmd
+++ b/text/discussion.Rmd
@@ -1,9 +1,9 @@
 ### Classification of tumors independent of tissue-of-origin 
 
-One of the biggest hurdles in cancer research is the size of the search space;
+One of the biggest hurdles in cancer research is the sparsity of data; 
 ~20,000 protein-coding genes is comparable with the number of tumor samples,
 even with multiple mutations per sample. And that is not accounting for the fact
-that ~30k non-coding genes and hundreds of thousands of non-coding regulatory
+that ~30,000 non-coding genes and hundreds of thousands of non-coding regulatory
 elements exist with oncogenic or tumor suppressor activity [@deesMuSiC2012;
 @tamboreroOncodriveCLUST2013;
 @lawrenceDiscoverySaturationAnalysis2014;
@@ -30,8 +30,8 @@ expressed in each cancer type, thus avoiding bias from transcription coupled
 repair. Our method of filtration differs from the "rank-and-cut" method of
 [@PCAWG-MAIN] but represents a reasonable attempt to account for the same
 biases. We also filtered genes on the basis of pathway membership in biochemical
-pathways, excluding curated genesets related to diseases, syndromes, or classes
-of proteins ( _e.g._ transcription factors) which are potentially problematic
+pathways, excluding curated gene sets related to diseases, syndromes, or classes
+of proteins with shared catalytic activity or conserved domains ( _e.g._ transcription factors) which are potentially problematic
 [@pathways-Atul-Butte]. We chose this approach to limit redundancy, which is
 already high in the remaining pathways for some driver genes, and to exclude
 biologically unrelated collections of genes. We do not account for non-coding
@@ -39,11 +39,11 @@ mutations, amplification events or structural variants, though we hope to
 include them in subsequent studies (see below). Our pathway-centric analysis
 also allows us to circumvent the problem that some cancer-promoting mutations
 likely occur at low enough frequencies as to be indistinguishable from
-background. Previous attempts to capture these associations better using
+background. Previous attempts to capture these associations using
 Bayesian networks have yielded important new insights into this problem and new
 genes [@hornNetSigNetworkbasedDiscovery2018] that would not have been possible
 with traditional analysis, supporting the case that pathway-centric approaches
-like ours have the potential to increase statistical power.
+have the potential to increase statistical power.
 
 The hypothesis that cancer is the result of dysfunction from
 a limited number of basic cellular processes common to all living human cells
@@ -82,8 +82,8 @@ associated with unique combinations of pathways (as in **figures 5B, C**).
 
 We find that most tumors segregate into one of ten biologically distinct
 clusters, regardless of the cancer type (**figure 2F, 3A** and **supplementary
-figure S1**). Some cancer types ( _e.g._ pancreatic adenocarcinomas in the RAS
-mutant cluster 8, and Kidney Chromophobe in cluster 1, see **supplementary
+figure S1**). Some cancer types ( _e.g._ Pancreatic:PAAD in the RAS
+mutant cluster 8, and Kidney Chromophobe:KICH in cluster 1, see **supplementary
 figure S1**) are unevenly distributed, though we could not identify any cancers
 that were exclusive to a single tumor class. Only cancer types with the fewest
 samples were found to be absent from one or more classes at all. Somewhat
@@ -120,13 +120,13 @@ different precision treatment regimens.
 
 ### Tissue specific manifestation of pathway-centric disruptions
 
-Our results illustrate how unique combinations of mutations in pan-cancer driver genes with tissue-specific pathway disruptions result in common categories when viewed at the level of the pathway knowledge-base. For example, in table 1 we find that `snRNP assembly`, one of the unique driver pathways of cluster 5, the top gene in breast cancer is represented by TPR (mutated in 26% of samples). By contrast the top gene for head and neck and lower grade gliomas is RANBP (20% and 13% of samples, respectively). For some other clusters, _e.g._ 7, 8 & 9, the top genes are known drivers such as TP53, PIK3CA and KRAS. None of these genes is 100% mutated in any cluster however, and therefore it is the combinations with secondary mutations, many of which are tissue-specific, that round out the complement of pathways in all clusters. These top genes are found in most of the clusters (supplemental figure S5), and in spite of the fact that they contribute to many cluster-specific pathways. This can only be explained as a result of other less common driver genes complementing the pathway disruption of the unique combination of driver genes that are disrupted in each tumor, and we speculate that many of these are relatively tissue-specific in terms of their sensitivity to mutation. Consistent with our observations, @moonlight showed how tissue- and cancer-specific driver genes and druggable targets of pathway moduli can be discovered by machine learning on integrated multi-omics datasets. Marrying these approaches in future work will greatly enhance our understanding of tumor biology.
+Our results illustrate how unique combinations of mutations in pan-cancer driver genes with tissue-specific pathway disruptions result in common categories when viewed at the level of the pathway knowledge-base. For example, we find that for "snRNP assembly", one of the unique driver pathways of cluster 5, the top gene in breast cancer is represented by TPR (mutated in 26% of samples). By contrast the top gene for head and neck and lower grade gliomas is RANBP (20% and 13% of samples, respectively). For some other clusters, _e.g._ 7, 8 & 9, the top genes are known drivers such as TP53, PIK3CA and KRAS. None of these genes is 100% mutated in any cluster however, and therefore it is the combinations with secondary mutations, many of which are tissue-specific, that round out the complement of pathways in all clusters. Some top genes are found in most of the clusters (supplemental figure S5), in spite of the fact that they contribute to many cluster-specific pathways. This can only be explained as a result of other less common driver genes complementing the pathway disruption of the unique combination of driver genes that are disrupted in each tumor, and we speculate that many of these are relatively tissue-specific in terms of their sensitivity to mutation. Consistent with our observations, @moonlight showed how tissue- and cancer-specific driver genes and druggable targets of pathway moduli can be discovered by machine learning on integrated multi-omics datasets. Marrying these approaches in future work will greatly enhance our understanding of tumor biology.
 
 ### Incompleteness of the pathway disruption data 
 
 Finally, we must remark on the limitations of our work exemplified in two of the
-classes, 1 and 10, for which we did not find distinctive associations with
-pathways (**figure 5B, C**). Class 1 has a relatively low proportion of mutated
+classes, 1 and 10, for which we did not find many distinctive associations with
+pathways (**figure 5B, C**). Class 1 had a relatively low proportion of mutated
 pathways across the board, although it is broadly enriched in many of the same
 tumor-promoting pathways common to the other groups. This likely does not
 reflect a true difference in stages of tumor evolution, as our data show clearly
@@ -139,10 +139,8 @@ proportions of structural variations _vs._ other variant types [@PCAWG-MAIN] and
 skewed to cluster 1 membership (**Supplementary figure S1**). Likewise, Class 10
 represents a group of hyper-mutated tumors that harbor so many mutations that
 virtually no pathway is unaffected. It seems likely that a significant fraction
-of the samples flagged as “mutant” for each pathway are actually unaffected,
-consistent with those samples have low information content. This could be
-addressed with application of ever-increasingly sophisticated bioinformatics
-algorithms for filtering likely passenger mutations [ _e.g._ @spliceAI;
+of the “mutant” samples for each pathway are burdened with excess passenger mutations. This could be
+addressed with application of ever-increasingly sophisticated filtering likely passenger mutations [ _e.g._ @spliceAI;
 @deep-learning-clinical-variants]. In the future, we hope to incorporate these
 other data into a comprehensive pathway-centric analysis as we have done here
 for point mutations and indels.
@@ -152,22 +150,21 @@ for point mutations and indels.
 By modeling CDC longevity data as a baseline risk function we showed that each
 of our pathway disruption classes exhibit cancer-type specific effects on
 expected survival (**figure 7**). Contrary to what one might expect at the
-outset, we found that models assuming different survival based on class _and_
-cancer type fit better than models in which these variables are independent
+outset, we found that models assuming different survival based on class and
+cancer type fit better than models in which they are independent
 factors. However, considering that within each cancer type there are different
 clinical standards of care, and even within classes of drugs the preferred
-treatment can very between cancers, it makes sense in hindsight that they should
-all be different. Contrast the situation with ovarian _vs._ breast cancer, which
+treatment can very between cancers, it makes sense that we observe tissue-specific class effects. Contrast the situation with ovarian _vs._ breast cancer, which
 are both hormonally driven cancers, for example. Ovarian cancer has but one main
 treatment axis, platinum, whereas breast cancer patients have a variety of
 treatment regimens based on molecular subtype and other factors. It is easy to
 see how standard of care for one cancer and class could produce different
 outcomes than the same class of a different cancer type. Unfortunately, given
 the diversity drug classes and treatments (including non-chemical treatments
-such as surgery and palliative care), we lack sufficient power in the current
-study to explore these variables in the TCGA data. It is our hope that more
-focused future studies will help to distinguish between treatment-specific
-effects or survival given different pathway disruption classes.
+such as surgery and palliative care), we lack sufficient power 
+to explore these variables in the TCGA data. It is our hope that 
+future studies will help to distinguish between treatment-specific
+effects on survival given different pathway disruption classes.
 
 ### Implications for the evolution of cancer 
 
@@ -177,7 +174,7 @@ mutations and metastasis. General cancer promoting processes must include
 factors that relate to genome stability and immortality, as "enabling
 characteristics" of the cancer phenotype [@hallmarks_II]. Such pathways are
 disrupted in all or most of the defined classes (**supplementary figure S1**)
-and often are the result of aberrations involving common driver genes such as
+and are frequently the result of aberrations involving common driver genes such as
 BRCA1/2, MMR genes, mitotic checkpoints, Cohesion complexes, _etc._
 (**supplementary figure S3** and **supplemental file 1**). Class-specific
 evolution must involve the acquisition of disruptions to pathways that may
@@ -201,7 +198,7 @@ varying selective pressures in different tissues [@PCAWG-MAIN].
 
 One of the drawbacks of bulk tumor whole genome sequencing data is the problem
 of tumor heterogeneity. Consortium samples are likely to contain contamination
-from support tissue, stroma, inflammatory, and immune cells of the innate and
+from support tissue, stroma, inflammatory cells, immune cells of the innate and
 adaptive immune systems, all potentially harboring cancer supporting mutations
 [@bhowmick_review]. We think it will be instructive to explore these ideas in
 the context of single cell experiments.
@@ -211,7 +208,7 @@ the context of single cell experiments.
 We report that pathway enrichment in metastatic tumors across all classes
 (pooled) yielded generally lower effect sizes and larger p-values than the
 cluster specific analysis, suggesting that signal is diluted when the samples
-are analyzed together, and supporting the view that metastasis has
+are analyzed together, and supporting the view that, within the parameters of our analysis, metastasis has
 class-specific requirements. Since the number of metastatic samples is
 relatively low this part of our analysis is likely underpowered and subject to
 expanded analysis with larger cohorts. Nonetheless, the class-specific
@@ -222,8 +219,8 @@ don’t know the order in which they were acquired. The fact that most metastati
 enrichment is cluster-specific and has a tendency to overlap with
 cluster-specific pathways from non-metastatic tumors of neighboring clusters
 favors the latter interpretation, and suggests a mechanism of complementarity,
-in which newly acquired mutations result in similar classes converging on a
-single deadly phenotype that captures most of the critical features of end-stage
+in which newly acquired mutations result in similar classes converging on
+one or more deadly phenotypes that capture most of the critical features of end-stage
 cancer. One explanation for this could be that tumors must accumulate mutations
 in a certain order or face elimination due to any of the selective bottlenecks
 they face (senescence, the immune system, _etc._) [@hallmarks_II]. Some clusters
@@ -233,7 +230,7 @@ cluster 3 has mutations impacting protein translation, whereas cluster 5 has
 defects in RNA metabolism and clusters 7, 8 and 9 have defects in the more
 traditional extra-cellular signaling pathways (as exemplified in **table S1**).
 It may be that the primary effects of mutations in protein and RNA metabolism in
-clusters 3 and 5 point to currently unappreciated mechanisms impacting hallmark
+clusters 3 and 5 point to currently underappreciated mechanisms impacting hallmark
 pathways. Clusters 3 and 5 are also marked by a decidedly different set of
 pathways in metastasis. Clusters 3 and 5 notably have (in addition to signaling
 pathways) mutations in glucagon and glycogen metabolism, respectively, in their
