--- a/text/survival-methods.Rmd
+++ b/text/survival-methods.Rmd
@@ -1,8 +1,6 @@
-
 In order to understand how the diagnosis of cancer changes the expectation for
-longevity of patients, we first began by modeling the longevity of the overall
-population of the US based on CDC life tables. Although childhood cancers exist
-and are tragic, most cancer patients have diagnosis later in life. We modeled
+longevity of patients, we first modeled the longevity of the overall
+population of the U.S. based on CDC life tables. Most TCGA cases are diagnosed late in life, so we fit a model that emphasizes accuracy in the right tail of the distribution. We modeled
 baseline longevity using a risk rate function:
 
 $$R(t) = R_{20}\exp(a(A-20) + D(t) k a (\frac{t}{365}))$$ 
@@ -10,14 +8,14 @@ $$R(t) = R_{20}\exp(a(A-20) + D(t) k a (\frac{t}{365}))$$
 Time is split into two components. $A$ going from 0 up to the age of the patient
 at diagnosis and then remaining fixed, whereas $t$ starts at 0 upon diagnosis
 and represents the days since diagnosis, a field recorded in the dataset. $D(t)$
-is an indicator for whether diagnosis has occurred or not (before diagnosis D(t)
-= 0, after it equals 1). The model essentially assumes that the risk of dying
-per year at age 20 years is $R_{20}$ and that it increases exponentially with a
-constant rate $a$ up to diagnosis, and then with a new rate $ka$
-thereafter. Though the model does extend back to earlier ages, relatively few
+is an indicator for whether diagnosis has occurred or not (before diagnosis $D(t) = 0$, 
+after $D(t) = 1$). The model assumes that the risk of death
+is $R_{20}$ at age 20 years and increases exponentially with a
+constant rate $a$ up to the age at diagnosis. Risk of death assumes a new rate $ka$
+thereafter. Though the model extends to earlier ages, relatively few
 patients were under age 20.
 
-Given this risk per unit time, the probability to die at time $T+dT$ is the
+Given this risk per unit time, the probability of death at time $T+dT$ is the
 probability to survive to time $T$ which is $(1-P(T))$ and then die in the
 remaining interval which is $R(T)dT$
 
@@ -45,9 +43,9 @@ $$k = k_{tis} k_{cl}$$
 The product $k_{tis}k_{cl}$ is obviously symmetric between the two factors. To
 disambiguate the meaning of the two, the prior distribution of $k_{cl}$ has peak
 probability at 1 and a relatively narrow width, due to the fact that it is a
-tissue specific multiplicative modifying factor, this allows the overall
-magnitude of k to be primarily determined by the $k_{tis}$ value whose prior is
-significantly less constrained so that there is a wider range of dangers across
+tissue specific multiplicative modifying factor. This allows the overall
+magnitude of $k$ to be primarily determined by the $k_{tis}$ value whose prior is
+significantly less constrained so that there is a wider range of risk across
 tissue types.
 
 The $k$ in our model can be taken as, roughly, the aging rate relative
@@ -55,10 +53,10 @@ to the baseline rates. Thus, a value of $k=2$ means that a given
 cancer causes you to experience the same risk in time $dt$ as a
 non-cancer patient would experience at the same age, in time $2dt$.
 
-Using this model, we split the data by Male/Female sex, and by White, vs Black
+Using this model, we split the data by Male/Female sex, and by White, _vs._ Black
 race as these were the main well-identified categories available to us in the
 dataset. Sex is known to be a risk factor for death, with males dying at
-slightly higher rates for all ages of interest in our dataset. Black vs White
+slightly higher rates for all ages of interest in our dataset. Black _vs._ White
 race is an important category due to differences in access to care and other
 socioeconomic and education related factors. However, due to the low number of
 Black patient tumors, we use ethnicity only to identify the baseline risk
