--- a/text/survival.Rmd
+++ b/text/survival.Rmd
@@ -1,5 +1,3 @@
-
-
 If our molecular pathway disruption classes represent distinct biological states
 apart from tissue of origin, they may have different prognoses within cancer
 types or across all cancers. Kaplan-Meier plots reveal large differences between
@@ -9,8 +7,8 @@ stage at diagnosis, sex, ethnicity, and tissue-specific disease progression, to
 name the obvious ones. To explore these ideas, we tested models of survival
 using public longevity data from the CDC, accounting for age, gender and
 ethnicity. Our model assumes that at birth each person has a small initial
-probability per unit time to die, and that this probability per unit time of
-death conditional on age, grows exponentially in time at some baseline rate that
+probability per unit time to die, and that this probability 
+grows exponentially in time at some baseline rate that
 matches the observed CDC data. The rate of growth in risk is assumed to jump to
 a higher level at diagnosis, which we take as a proxy for onset. This represents
 an accelerated aging type model. To fit the model, we constrain the baseline
@@ -20,15 +18,15 @@ estimates the effect of cancer type and class-specific cancer effects
 independently, resulting in a cancer and class specific estimate of the aging
 rate multiplier. 
 
-To understand the model, see **Figure 7A** where we show simulated survival time
+To understand the model, we show in **Figure 7A** simulated survival time
 curves for four related groups. We start with a cohort of women aged 30 and show
-their expected survival (blue). By setting their cancer rate multiplier to k=2
+their expected survival (blue). By setting their cancer rate multiplier to $k=2$
 we can simulate the effect of a moderately deadly cancer (red). Compare this to
 a randomly selected group of women ranging in age from 30 to 70 years old (dark
 blue). Immediately the survival curve changes due to the mixture of ages,
-without any malignancy. Adding a k=2 malignancy further reduces expected
-lifespan (dark red). We can see that for different tissues simply due to the
-change in distribution of age-at-diagnosis we should expect equally deadly
+without any malignancy. Adding a $k=2$ malignancy further reduces expected
+lifespan (dark red). We can see that for different tissues, simply due to the
+change in distribution of age-at-diagnosis, we should expect equally deadly
 cancers to have *different* survival curves. The model takes this into account
 and the aggressiveness of the cancer can be estimated without the confounding
 aspect of age.
@@ -43,11 +41,11 @@ have relatively healthy behaviors, are seen regularly by doctors, and comply
 with health recommendations.
 
 The degree to which a given cancer accelerates aging can be determined by the
-ktis multiplier (**Figure 7F**) multiplied by the class specific modifier
+$k_{tis}$ multiplier (**Figure 7F**) multiplied by the class specific modifier
 (**Figure 7G**). Looking at the tissue specific multiplier, the least deadly was
 prostate cancer (PRAD), and the most deadly was glioblastoma (GBM) which has a
 risk multiplier of between 15 and 22 relative to the background risk of death in
-the population. This undoubtedly is due to the fact that relatively young
+the population. This undoubtedly is influenced by the fact that relatively young
 patients are affected by GBM and that it is extremely deadly. Among the
 deadliest cancers outside of GBM were stomach (STAD), melanoma (SKCM) and
 pancreatic (PAAD) cancers. Apart from these top 4 cancers which ranged from 6-22
@@ -62,9 +60,9 @@ or more deadly than other classes within each cancer types (**Figure 7G**). A
 class specific rate of 1 represents typical rate for this tissue type. For
 several cancers ( _e.g._ PRAD, kidney chromophobe (KICH), diffuse large B-cell
 lymphoma (DBLC), thyroid cancer (THCA)) the posterior estimates are largely
-indestinguishable from the prior, reflecting that either there were too few
+indistinguishable from the prior, reflecting that either there were too few
 mortalities in the data to make an estimate (as expected for PRAD and THCA) or
-two few samples period. We did not observe class-specific trends that held true
+two few samples, period. We did not observe class-specific trends that held true
 across cancer types, which could result from different cancers having different
 standards of care for example. In support of this interpretation, we also tested
 a factored model which considered both cancer type and each class independent of
@@ -73,4 +71,4 @@ is a special case of the more general model where class and tissue can
 independently affect longevity, and there is no reason to believe that class
 specific effects would necessarily remain constant across tissue types given how
 widely the patients vary across tissue types as well as the different drug and
-surgical treatments typical used for each tissue.
+surgical treatments typically used for each tissue.
